renamed index file

--- a/02_Services.html
+++ b/02_Services.html
@@ -14,7 +14,7 @@
     <span>Lakshura Studio</span>
   </div>
   <nav>
-  <a href="01_index.html">Home</a>
+  <a href="index.html">Home</a>
 
   <!-- SERVICES DROPDOWN -->
   <div class="nav-dropdown">
