--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
   
   <nav>
-  <a href="01_index.html">Home</a>
+  <a href="index.html">Home</a>
 
   <!-- SERVICES DROPDOWN -->
   <div class="nav-dropdown">
