--- a/02C_Aari.html
+++ b/02C_Aari.html
@@ -13,7 +13,7 @@
     <span>Lakshura Studio</span>
   </div>
   <nav>
-    <a href="01_index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="02_Services.html">Services</a>
     <a href="03_Classes.html">Classes</a>
     <a href="05_Gallery.html">Gallery</a>
