--- a/07_FAQ.html
+++ b/07_FAQ.html
@@ -14,7 +14,7 @@
   </div>
 
   <nav>
-    <a href="01_index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="02_Services.html">Services</a>
     <a href="03_Classes.html">Classes</a>
     <a href="05_Gallery.html">Gallery</a>
